fixed stats scrollbar colors

--- a/Extension/src/pages/common/styles/vars.pcss
+++ b/Extension/src/pages/common/styles/vars.pcss
@@ -132,7 +132,6 @@
     --fills-buttons-main-button-default-inactive: var(--gray-50);
     --fills-inputs-input-background-default: var(--gray-10);
     --fills-inputs-input-background-disabled: var(--gray-10);
-    --fills-loaders-background-default: var(--gray-20);
     --fills-logo-key-color-default: var(--gray-90);
     --fills-menus-dropdown-menu-background-default: var(--gray-0);
     --fills-menus-dropdown-menu-background-hovered: var(--gray-10);
@@ -176,7 +175,6 @@
         --fills-buttons-main-button-default-inactive: var(--gray-60);
         --fills-inputs-input-background-default: var(--gray-80);
         --fills-inputs-input-background-disabled: var(--gray-80);
-        --fills-loaders-background-default: var(--gray-70);
         --fills-logo-key-color-default: var(--gray-10);
         --fills-menus-dropdown-menu-background-default: var(--gray-80);
         --fills-menus-dropdown-menu-background-hovered: var(--gray-70);
@@ -222,7 +220,6 @@
     --fills-buttons-main-button-default-inactive: var(--gray-60);
     --fills-inputs-input-background-default: var(--gray-80);
     --fills-inputs-input-background-disabled: var(--gray-80);
-    --fills-loaders-background-default: var(--gray-70);
     --fills-logo-key-color-default: var(--gray-10);
     --fills-menus-dropdown-menu-background-default: var(--gray-80);
     --fills-menus-dropdown-menu-background-hovered: var(--gray-70);
@@ -267,7 +264,6 @@
     --fills-buttons-main-button-default-inactive: var(--gray-50);
     --fills-inputs-input-background-default: var(--gray-10);
     --fills-inputs-input-background-disabled: var(--gray-10);
-    --fills-loaders-background-default: var(--gray-20);
     --fills-logo-key-color-default: var(--gray-90);
     --fills-menus-dropdown-menu-background-default: var(--gray-0);
     --fills-menus-dropdown-menu-background-hovered: var(--gray-10);
