--- a/Extension/src/pages/popup/components/Tabs/tabs.pcss
+++ b/Extension/src/pages/popup/components/Tabs/tabs.pcss
@@ -25,7 +25,8 @@
             min-height: 176px;
             overflow-y: scroll;
             scrollbar-width: thin;
-            scrollbar-color: var(--fills-loaders-background-default) var(--fills-backgrounds-page-background-default);
+            scrollbar-color: var(--stroke-icons-gray-icons-disabled)
+                var(--fills-backgrounds-page-background-additional-default); /* FIXME: opacity: 0.3 */
 
             &.tabs__content--has-user-rules {
                 max-height: 216px;
